manifests/minio/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minio
    component: data-science-pipelines
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
      component: data-science-pipelines
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
        component: data-science-pipelines
    spec:
      containers:
        - args:
            - server
            - /data
            - --console-address
            - :9001
          image: quay.io/minio/minio:RELEASE.2023-10-16T04-13-43Z
          imagePullPolicy: IfNotPresent
          name: minio
          ports:
            - containerPort: 9000
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 100Mi
          volumeMounts:
            - mountPath: /data
              name: data
              subPath: minio
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio
