manifests/minio/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio
spec:
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: web
